--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://jerryjrchen.com" # the base hostname & protocol for your site
 github_username:  cjerry
+linkedin_username: jerryjrchen
+google_analytics: UA-64859905-1
 
 # Build settings
 markdown: kramdown
