--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Jerry Chen
+title: jerryjrchen
 email: jerry.c@berkeley.edu
 description: > # this means to ignore newlines until "baseurl:"
   Jerry Chen's website
