--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://jerryjrchen.com" # the base hostname & protocol for your site
 github_username:  cjerry
 linkedin_username: jerryjrchen
+resume: https://www.dropbox.com/s/kgnbj14qclvjjxe/Jerry-Chen-Resume-R.pdf?dl=0
 google_analytics: UA-64859905-1
 
 sass:
