Mistakes were made

--- a/_data/cs61a/fa16.yml
+++ b/_data/cs61a/fa16.yml
@@ -14,5 +14,5 @@ locations:
     time: Th 11:30-12:30pm
     location: 540AB Cory
   - type: Lab
-    time: Th 11:30-12:30pm
+    time: Tu 11:30-12:30pm
     location: 275 Soda
