--- a/_data/cs61a/fa16.yml
+++ b/_data/cs61a/fa16.yml
@@ -4,7 +4,7 @@ resources:
     downloads:
       - name: Slides
         type: slides
-        link: ???
+        link: fa16/assets/Disc0.pdf
 
 locations:
   - type: Office Hours
