--- a/_data/cs61a/fa16.yml
+++ b/_data/cs61a/fa16.yml
@@ -50,6 +50,12 @@ resources:
       - name: BTree
         type: code
         link: fa16/assets/bt_practice.zip
+  - number: 7
+    description: Scheme
+    downloads:
+      - name: Slides
+        type: slides
+        link: fa16/assets/Disc07.pdf
 
 
 locations:
