--- a/_data/cs61a/fa16.yml
+++ b/_data/cs61a/fa16.yml
@@ -56,6 +56,12 @@ resources:
       - name: Slides
         type: slides
         link: fa16/assets/Disc07.pdf
+  - number: 8
+    description: Interpreters and Tail Calls
+    downloads:
+      - name: Slides
+        type: slides
+        link: fa16/assets/Disc08.pdf
 
 
 locations:
