--- a/_data/cs61a/fa16.yml
+++ b/_data/cs61a/fa16.yml
@@ -68,6 +68,12 @@ resources:
       - name: Slides
         type: slides
         link: fa16/assets/Disc09.pdf
+  - number: 10
+    description: SQL
+    downloads:
+      - name: Slides
+        type: slides
+        link: fa16/assets/Disc10.pdf
 
 
 locations:
