Add disc11 slides

--- a/_data/cs61a/fa16.yml
+++ b/_data/cs61a/fa16.yml
@@ -74,6 +74,12 @@ resources:
       - name: Slides
         type: slides
         link: fa16/assets/Disc10.pdf
+  - number: 11
+    description: Special Topics
+    downloads:
+      - name: Slides
+        type: slides
+        link: fa16/assets/Disc11.pdf
 
 
 locations:
