--- a/_data/cs61a/sp17.yml
+++ b/_data/cs61a/sp17.yml
@@ -8,11 +8,17 @@ resources:
 
 locations:
   - type: Office Hours
-    time: TBD
-    location: TBD
+    time: Tu 3-4pm
+    location: 109 Morgan
   - type: Discussion
-    time: TBD
-    location: TBD
+    time: Fri 12:30pm-2pm
+    location: 310 Soda
   - type: Lab
-    time: TBD
-    location: TBD
+    time: Wed 12:30pm-2pm
+    location: 271 Soda
+
+notes:
+  - date: Week 1
+    content:
+      - text: Welcome to 61A! Check in for the [first week here](n.date).
+      - text: Check out [this page](http://jerryjrchen.com/cs61a/setup) if you're curious about my development setup.
