Add disc00 slides

--- a/_data/cs61a/sp17.yml
+++ b/_data/cs61a/sp17.yml
@@ -4,7 +4,7 @@ resources:
     downloads:
       - name: Slides
         type: slides
-        link: TODO
+        link: sp17/assets/disc0.pdf
 
 locations:
   - type: Office Hours
