--- a/_data/cs61a/sp17.yml
+++ b/_data/cs61a/sp17.yml
@@ -20,5 +20,5 @@ locations:
 notes:
   - date: Week 1
     content:
-      - text: Welcome to 61A! Check in for the [first week here](n.date).
+      - text: Welcome to 61A! Check in for the [first week here](http://tinyurl.com/firstdisc).
       - text: Check out [this page](http://jerryjrchen.com/cs61a/setup) if you're curious about my development setup.
