--- a/_data/cs61a/sp17.yml
+++ b/_data/cs61a/sp17.yml
@@ -17,6 +17,12 @@ resources:
       - name: Slides
         type: slides
         link: sp17/assets/disc02.pdf
+  - number: 3
+    description: Sequences and Trees
+    downloads:
+      - name: Slides
+        type: slides
+        link: sp17/assets/disc03.pdf
 
 locations:
   - type: Office Hours
@@ -37,6 +43,9 @@ notes:
   - date: Week 1
     content:
       - text: Remember to check in each week for attendance. Link is above.
+  - date: Week 3
+    content:
+      - text: Here's a interesting perspective on how defaults slices are handled [(Stack Overflow)](http://stackoverflow.com/a/12522871/6469972).
 
 locations:
   - type: Office Hours
