--- a/_data/cs61a/sp17.yml
+++ b/_data/cs61a/sp17.yml
@@ -60,7 +60,7 @@ notes:
 
 locations:
   - type: Office Hours
-    time: Tu 3-4pm
+    time: Tu 3pm-4pm
     location: 109 Morgan
   - type: Discussion
     time: Fri 12:30pm-2pm
