Update resume link

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -5,4 +5,5 @@
 - icon: fa-envelope
   url: mailto:jerry.c@berkeley.edu
 - icon: fa-file-text
-  url: https://www.dropbox.com/s/kgnbj14qclvjjxe/Jerry-Chen-Resume-R.pdf?dl=0
+  url: https://dl.dropboxusercontent.com/u/23447330/Jerry-Chen-Resume-R.pdf
+
