--- a/_data/cs61a/sp17.yml
+++ b/_data/cs61a/sp17.yml
@@ -35,6 +35,12 @@ resources:
       - name: Slides
         type: slides
         link: /cs61a/sp17/assets/disc06.pdf
+  - number: 7
+    description: Orders of Growth and Trees
+    downloads:
+      - name: Slides
+        type: slides
+        link: /cs61a/sp17/assets/disc07.pdf
 
 locations:
   - type: Office Hours
