--- a/_data/cs61a/sp17.yml
+++ b/_data/cs61a/sp17.yml
@@ -47,6 +47,12 @@ resources:
       - name: Slides
         type: slides
         link: /cs61a/sp17/assets/disc08.pdf
+  - number: 9
+    description: Interpreters and Tail Calls
+    downloads:
+      - name: Slides
+        type: slides
+        link: /cs61a/sp17/assets/disc09.pdf
 
 locations:
   - type: Office Hours
