--- a/_data/cs61a/sp17.yml
+++ b/_data/cs61a/sp17.yml
@@ -53,6 +53,12 @@ resources:
       - name: Slides
         type: slides
         link: /cs61a/sp17/assets/disc09.pdf
+  - number: 10
+    description: Delayed Expressions and Binary Trees
+    downloads:
+      - name: Slides
+        type: slides
+        link: /cs61a/sp17/assets/disc10.pdf
 
 locations:
   - type: Office Hours
