--- a/_data/work.yml
+++ b/_data/work.yml
@@ -1,3 +1,12 @@
+- name: Apple
+  image: /assets/apple_logo.png
+  tags:
+    - ObjC
+    - C
+  description:
+    - <i>Software Engineering Intern</i>
+    - Improved performance of Apple's core logger.
+
 - name: Optiver
   image: /assets/optiver_logo.png
   tags:
