--- a/_data/cs61a/fa17.yml
+++ b/_data/cs61a/fa17.yml
@@ -8,8 +8,17 @@ resources:
 
 locations:
   - type: Office Hours
-    time: TBD
-    location: TBD
+    time: M 19:30-20:00
+    location: 521 Cory
+  - type: Office Hours
+    time: W 18:30-19:30
+    location: 400 Cory
+  - type: Office Hours
+    time: Th 17:00-18:00
+    location: 109 Morgan
+  - type: Office Hours
+    time: Th 18:30-19:30
+    location: 400 Cory
   - type: Discussion
     time: Th 15:30-17:00
     location: 243 Dwinelle
