--- a/_data/cs61a/fa17.yml
+++ b/_data/cs61a/fa17.yml
@@ -41,6 +41,12 @@ resources:
       - name: Slides
         type: slides
         link: /cs61a/fa17/assets/Disc06.pdf
+  - number: 7
+    description: Scheme
+    downloads:
+      - name: Slides
+        type: slides
+        link: /cs61a/fa17/assets/Disc07.pdf
 
 locations:
   - type: Office Hours
