--- a/_data/cs61a/fa17.yml
+++ b/_data/cs61a/fa17.yml
@@ -47,6 +47,12 @@ resources:
       - name: Slides
         type: slides
         link: /cs61a/fa17/assets/Disc07.pdf
+  - number: 8
+    description: Interpreters and Tail Calls
+    downloads:
+      - name: Slides
+        type: slides
+        link: /cs61a/fa17/assets/Disc08.pdf
 
 locations:
   - type: Office Hours
