--- a/_data/cs61a/fa17.yml
+++ b/_data/cs61a/fa17.yml
@@ -53,6 +53,12 @@ resources:
       - name: Slides
         type: slides
         link: /cs61a/fa17/assets/Disc08.pdf
+  - number: 9
+    description: Delayed Expressions
+    downloads:
+      - name: Slides
+        type: slides
+        link: /cs61a/fa17/assets/Disc09.pdf
 
 locations:
   - type: Office Hours
