--- a/_data/cs61a/fa17.yml
+++ b/_data/cs61a/fa17.yml
@@ -59,6 +59,12 @@ resources:
       - name: Slides
         type: slides
         link: /cs61a/fa17/assets/Disc09.pdf
+  - number: 10
+    description: SQL
+    downloads:
+      - name: Slides
+        type: slides
+        link: /cs61a/fa17/assets/Disc10.pdf
 
 locations:
   - type: Office Hours
