--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,5 +1,5 @@
 - icon: fa-github
-  url: https://github.com/cjerry
+  url: https://github.com/jerryjrchen
 - icon: fa-linkedin
   url: https://linkedin.com/in/jerryjrchen
 - icon: fa-envelope
