--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "jerryjrchen",
   "homepage": "https://github.com/cjerry/cjerry.github.io",
   "authors": [
-    "Jerry Chen <jerry.c@berkeley.edu>"
+    "Jerry Chen <jerry@jerryjrchen.com>"
   ],
   "description": "",
   "main": "",
