Fix a few more references

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,7 +10,7 @@
   links:
     - icon: fa-github
       button-type: btn-info
-      url: https://github.com/cjerry/cjerry.github.io
+      url: https://github.com/jerryjrchen/jerryjrchen.github.io
       text: Code
     - icon: fa-external-link
       button-type: btn-success
