--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "jerryjrchen",
-  "homepage": "https://github.com/cjerry/cjerry.github.io",
+  "homepage": "https://github.com/jerryjrchen/jerryjrchen.github.io",
   "authors": [
     "Jerry Chen <jerry@jerryjrchen.com>"
   ],
