Add disc01 slides

--- a/_data/cs61a/sp18.yml
+++ b/_data/cs61a/sp18.yml
@@ -5,6 +5,12 @@ resources:
       - name: Slides
         type: slides
         link: sp18/assets/disc00.pdf
+  - number: 1
+    description: Control and Environments
+    downloads:
+      - name: Slides
+        type: slides
+        link: sp18/assets/disc01.pdf
 
 locations:
   - type: Office Hours
