Add disc06 slides

--- a/_data/cs61a/sp18.yml
+++ b/_data/cs61a/sp18.yml
@@ -41,6 +41,12 @@ resources:
       - name: Slides
         type: slides
         link: sp18/assets/disc05.pdf
+  - number: 6
+    description: Orders of Growth & Linked Lists
+    downloads:
+      - name: Slides
+        type: slides
+        link: sp18/assets/disc06.pdf
 
 locations:
   - type: Office Hours
