--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,15 @@ deploy:
     branch: source
   local-dir: _site/
   target-branch: master
+  committer-from-gh: true
 
 script:
-  - if [ -d "_site" ]; then rm -r _site; fi
-  - bundle exec jekyll build
+  - ./script/cibuild.sh
 
 branches:
   only:
     - source
+
+env:
+  global:
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
