Add disc08 slides

--- a/_data/cs61a/sp18.yml
+++ b/_data/cs61a/sp18.yml
@@ -53,6 +53,12 @@ resources:
       - name: Slides
         type: slides
         link: sp18/assets/disc07.pdf
+  - number: 8
+    description: Interpreters and Tail Calls
+    downloads:
+      - name: Slides
+        type: slides
+        link: sp18/assets/disc08.pdf
 
 locations:
   - type: Office Hours
