Add disc11 slides
Goodbye, CS 61A!

--- a/_data/cs61a/sp18.yml
+++ b/_data/cs61a/sp18.yml
@@ -71,6 +71,12 @@ resources:
       - name: Slides
         type: slides
         link: sp18/assets/disc10.pdf
+  - number: 11
+    description: Final Review and Special Topics
+    downloads:
+      - name: Slides
+        type: slides
+        link: sp18/assets/disc11.pdf
 
 locations:
   - type: Office Hours
